--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-scroll-horizontal": "^1.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
